<resources>
    <string name="app_name">Colombo Bus Route</string>
    <string name="search_route">Search Route</string>
    <string name="map">Map</string>
    <string name="route">Route</string>
    <string name="help">Help</string>
    <string name="start_to_end">Start to Destination</string>
    <string name="current_to_end">Current place to Destination</string>
    <string name="route_number">Route Number</string>
    <string name="current_bus">Buses in Current place</string>
    <string name="bus">Buses</string>
    <string name="about_app">This app will help you to find the bus route for your places within the city of Colombo.
        Unfortunately, this will not support for the places outside Colombo.
        You can search for the bus route number for your places and find the available buses and the route towards your destination. </string>
    <string name="search">Search</string>
    <string name="start">Start</string>
    <string name="destination">Destination</string>
    <string name="search_route_number">Search Route Number</string>
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
</resources>
