<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bus_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/bus_launcher"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"

        />

    <TextView
        android:id="@+id/start_to_destination"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@+id/bus_image"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/start_to_end"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/current_to_destination"
        android:layout_width="300dp"
        android:layout_height="70dp"

        android:layout_below="@+id/start_to_destination"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/current_to_end"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/route_number"
        android:layout_width="300dp"
        android:layout_height="70dp"

        android:layout_below="@+id/current_to_destination"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/route_number"
        android:gravity="center"
        android:textAllCaps="false"
        android:padding="16dp"
        android:textSize="18sp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/buses_currentplace"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@+id/route_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/current_bus"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
</RelativeLayout>
