<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/start_input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:outlineProvider="bounds"
             />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/destination_input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_below="@+id/start_input1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:outlineProvider="bounds"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/search_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/destination_input1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/search" />
</RelativeLayout>